[package]
name = "hypv-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = ["Win32_System_ProcessStatus", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug"] }
winapi = { version = "0.3.9", features = ["processthreadsapi", "memoryapi", "handleapi", "winnt", "minwindef", "tlhelp32"] }
anyhow = "1.0"
thiserror = "1.0"
